--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -5,9 +5,9 @@
     height: 6rem;
     font-size: 1.2rem;
     text-align: center;
-    background-color: rgba(146, 73, 9, 0.616);
+    background-color: #E1a66f;
     font-family: "Nothing You Could Do", cursive;
   padding-top: 2rem;
-  color: $October-5-hex;
+  color: #0c484b;
   }
   
