--- a/src/scss/todo.scss
+++ b/src/scss/todo.scss
@@ -11,9 +11,12 @@ align-items: flex-end;
 
 .todo-input {
     width: 100%;
-    border: none;
-    border-bottom: 1px solid $October-2-hex;
+    height: 2rem;
+       border: 1px solid ;
+       border-radius: 0.3rem;
+    background-color: #37666b;
     outline: none;
+    color: $October-4-hex;
 }
 .todo-create-button {
     padding: 5px 10px;
