--- a/src/scss/todo.scss
+++ b/src/scss/todo.scss
@@ -32,6 +32,7 @@ align-items: flex-end;
     align-items: center;
     justify-content: space-between;
     border: 1px solid $Teals-1;
+    color : $October-4-hex;
     background-color: $Teals-4;
     padding: 1rem;
     border-radius: 5px;
@@ -41,4 +42,5 @@ align-items: flex-end;
     display: flex;
     gap: 8px;
     cursor: pointer;
+    color: $Teals-2;
 }
