--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -9,5 +9,8 @@
     font-family: "Nothing You Could Do", cursive;
   padding-top: 2rem;
   color: #0c484b;
+  position:absolute;
+  bottom: 0;
+  width: 20rem;
   }
   
