--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,4 +9,15 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url(../assets/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+.App{
+    display: flex;
+    flex-direction: column;
+    justify-content:center ;
+    align-items: center;
+    text-align: center;
 }
