--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,8 +1,8 @@
 @import "./reset";
 @import  "./variables";
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Scribble&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Special+Elite&family=The+Girl+Next+Door&family=Wallpoet&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap');
+
 
 body {
     display: flex;
