--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,6 @@
 @import "./reset";
 @import  "./variables";
-@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Special+Elite&family=The+Girl+Next+Door&family=Wallpoet&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Nothing+You+Could+Do&family=Special+Elite&family=The+Girl+Next+Door&family=Wallpoet&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap');
 
 
