--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -2,15 +2,16 @@
 
 
 .last {
-    height: 6rem;
+    height: 5rem;
     font-size: 1.2rem;
-    text-align: center;
-    background-color: #E1a66f;
+    background-color: $October-4-hex;
     font-family: "Nothing You Could Do", cursive;
-  padding-top: 2rem;
+padding-top: 1.5rem;
   color: #0c484b;
   position:absolute;
   bottom: 0;
+  margin-bottom: 0.3rem;
   width: 20rem;
+  border-radius: 0.7rem;
   }
   
