--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -13,7 +13,11 @@ gap: 1rem;
 
 h1{
   font-family: "Wallpoet";
-
+}
+.sub{
+    font-size: 13px;
+    color: $October-4-hex;
+      font-family: "Nothing You Could Do"
 }
 
 img{
